--- a/public/courses/dataAnalyst.html
+++ b/public/courses/dataAnalyst.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!">
+    <meta
+      name="description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
     <title>Data Analyst - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
     <link rel="stylesheet" href="web.css" />
     <link
@@ -302,22 +305,6 @@
                       >
                         Complete curiculum
                       </button>
-                      <button
-                        type="button"
-                        class="btn btn-primary"
-                        onclick="downloadPDF('WD1')"
-                        data-bs-dismiss="modal"
-                      >
-                        1 month curiculum
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-primary"
-                        onclick="downloadPDF('WD6')"
-                        data-bs-dismiss="modal"
-                      >
-                        6 weeks curiculum
-                      </button>
                     </div>
                   </div>
                   <div class="modal-footer">
@@ -339,7 +326,7 @@
               data-bs-toggle="modal"
               data-bs-target="#secondmodal"
             >
-              Join our online courses
+              Join our course now
             </button>
 
             <!-- Modal -->
@@ -354,7 +341,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">
-                      Proceed To Course Duration And Payment
+                      Join Course Now
                     </h1>
                     <button
                       type="button"
@@ -388,6 +375,7 @@
                       type="button"
                       class="btn btn-secondary"
                       data-bs-dismiss="modal"
+                      id="Secondmodal"
                     >
                       Close
                     </button>
@@ -466,13 +454,19 @@
                 if (!response.ok) {
                   throw new Error("Network response was not ok");
                 }
-                // return response.blob(); // You don't need this if you are downloading from a fixed link
-                const a = document.createElement("a");
-                a.href = "../Pdf's/Data Analytics 6 Months New.pdf";
-                a.download = "Data_Analytics_AIT.pdf"; // Set the file name for download
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
+                document
+                  .getElementById("exampleModal")
+                  .classList.remove("show");
+                document.getElementById("exampleModal").style.display = "none";
+                document.getElementById("successModal").classList.add("show");
+                document.getElementById("successModal").style.display = "block";
+                document
+                  .getElementById("Secondmodal")
+                  .addEventListener("click", () => {
+                    document.getElementById("successModal").style.display =
+                      "none";
+                    window.location.reload();
+                  });
               })
               .catch((error) => {
                 console.error(
@@ -483,6 +477,19 @@
               });
           });
       });
+
+      function downloadPDF(type) {
+        if (type === "WD") {
+          const fileName = "Data Analytics 6 Months New.pdf";
+          const filePath = "../Pdf's/Data Analytics 6 Months New.pdf";
+          const a = document.createElement("a");
+          a.href = filePath;
+          a.download = fileName;
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+        }
+      }
     </script>
   </body>
 </html>
