--- a/public/courses/iot.html
+++ b/public/courses/iot.html
@@ -289,22 +289,6 @@
                       >
                         Complete curiculum
                       </button>
-                      <button
-                        type="button"
-                        class="btn btn-primary"
-                        onclick="downloadPDF('WD1')"
-                        data-bs-dismiss="modal"
-                      >
-                        1 month curiculum
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-primary"
-                        onclick="downloadPDF('WD6')"
-                        data-bs-dismiss="modal"
-                      >
-                        6 weeks curiculum
-                      </button>
                     </div>
                   </div>
                   <div class="modal-footer">
@@ -312,6 +296,7 @@
                       type="button"
                       class="btn btn-secondary"
                       data-bs-dismiss="modal"
+                      id="Secondmodal"
                     >
                       Close
                     </button>
@@ -326,7 +311,7 @@
               data-bs-toggle="modal"
               data-bs-target="#secondmodal"
             >
-              Join our online courses
+              Join our course now
             </button>
 
             <!-- Modal -->
@@ -341,7 +326,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">
-                      Proceed To Course Duration And Payment
+                      Join Course Now
                     </h1>
                     <button
                       type="button"
@@ -428,4 +413,65 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      document
+        .getElementById("courseForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          const formData = {
+            name: document.getElementById("name").value,
+            email: document.getElementById("email").value,
+            phone: document.getElementById("phone").value,
+            college: document.getElementById("college").value,
+            address: document.getElementById("address").value,
+            course: document.getElementById("course").value,
+          };
+          console.log(formData); // For debugging
+          fetch("http://localhost:3000/api/submit-form", {
+            method: "POST",
+            body: JSON.stringify(formData),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          })
+            .then((response) => {
+              if (!response.ok) {
+                throw new Error("Network response was not ok");
+              }
+              document.getElementById("exampleModal").classList.remove("show");
+              document.getElementById("exampleModal").style.display = "none";
+              document.getElementById("successModal").classList.add("show");
+              document.getElementById("successModal").style.display = "block";
+              document.getElementById("Secondmodal")
+                  .addEventListener("click", () => {
+                    document.getElementById("successModal").style.display =
+                      "none";
+                    window.location.reload();
+                  });
+            })
+            .catch((error) => {
+              console.error(
+                "There was a problem with the fetch operation:",
+                error
+              );
+              alert("Error submitting the form. Please try again.");
+            });
+        });
+    });
+
+    function downloadPDF(type) {
+      if (type === "WD") {
+        const fileName = "Professional IOT 4months.pdf";
+        const filePath = "../Pdf's/Professional IOT 4months.pdf";
+        const a = document.createElement("a");
+        a.href = filePath;
+        a.download = fileName;
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+        return
+      } 
+    }
+  </script>
 </html>
