--- a/public/courses/webdesign.html
+++ b/public/courses/webdesign.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!">
-    <title>Web Designing - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
+    <meta
+      name="description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
+    <title>
+      Web Designing - ANSH InfoTech:Leading IT Solutions in Ludhiana
+    </title>
     <link rel="stylesheet" href="web.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -361,7 +366,7 @@
               data-bs-toggle="modal"
               data-bs-target="#secondmodal"
             >
-              Join our online courses
+              Join our course now
             </button>
 
             <!-- Modal -->
@@ -376,7 +381,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">
-                      Proceed To Course Duration And Payment
+                      Join Course Now
                     </h1>
                     <button
                       type="button"
