--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!">
+    <meta
+      name="description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
     <title>Home - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -751,8 +754,8 @@
                   <p>Web Developer</p>
                   <p class="text-muted">
                     <i class="fas fa-quote-left pe-2"></i>
-                    It was a great experience. My course was web development. The
-                    curriculum has all the topics, and the content and
+                    It was a great experience. My course was web development.
+                    The curriculum has all the topics, and the content and
                     technologies used were always up to date with current market
                     requirements
                   </p>
@@ -764,7 +767,7 @@
                   <li><i class="fas fa-star fa-sm"></i></li>
                   <li><i class="fas fa-star fa-sm"></i></li>
                   <li><i class="fas fa-star fa-sm"></i></li>
-                  <li><i class="far fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
                 </ul>
               </div>
             </li>
@@ -772,18 +775,19 @@
               <div class="d-flex flex-column align-items-center">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
-                  src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp"
+                  src="images/Reviews/Cropped_Image (1).png"
                   alt="avatar"
                   style="width: 150px"
                 />
                 <div class="text-center">
-                  <h5 class="mb-3">John Doe</h5>
+                  <h5 class="mb-3">Jobanpal Singh</h5>
                   <p>Web Developer</p>
                   <p class="text-muted">
                     <i class="fas fa-quote-left pe-2"></i>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Minus et deleniti nesciunt sint eligendi reprehenderit
-                    reiciendis.
+                    This is simply the best Web Development course. Sir did a
+                    great job and put his heart into teaching all concepts of
+                    the course. Whenever I had doubts, he was eager to answer
+                    and helped me learn easily. Highly recommended.
                   </p>
                 </div>
                 <ul
@@ -801,18 +805,19 @@
               <div class="d-flex flex-column align-items-center">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
-                  src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp"
+                  src="images/Reviews/Cropped_Image (2).png"
                   alt="avatar"
                   style="width: 150px"
                 />
                 <div class="text-center">
-                  <h5 class="mb-3">Teresa May</h5>
+                  <h5 class="mb-3">Anhad Singh</h5>
                   <p>Web Developer</p>
                   <p class="text-muted">
                     <i class="fas fa-quote-left pe-2"></i>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Minus et deleniti nesciunt sint eligendi reprehenderit
-                    reiciendis.
+                    I’m glad I made the decision to take this course. Can’t
+                    appreciate it enough. I missed a few live classes but they
+                    provided me the recording and also cleared my doubts in the
+                    next classes
                   </p>
                 </div>
                 <ul
@@ -830,18 +835,20 @@
               <div class="d-flex flex-column align-items-center">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
-                  src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(22).webp"
+                  src="images/Reviews/Cropped_Image (3).png"
                   alt="avatar"
                   style="width: 150px"
                 />
                 <div class="text-center">
-                  <h5 class="mb-3">John Doe</h5>
+                  <h5 class="mb-3">Vipin Kumar</h5>
                   <p>Web Developer</p>
                   <p class="text-muted">
                     <i class="fas fa-quote-left pe-2"></i>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Minus et deleniti nesciunt sint eligendi reprehenderit
-                    reiciendis.
+                    The trainer here makes the content easy to learn and answers
+                    all the questions during the classes. I learned a lot of
+                    important concepts which looked so complex to me when I
+                    started. I recommend this course to anyone who wants to
+                    learn any course.
                   </p>
                 </div>
                 <ul
@@ -859,18 +866,111 @@
               <div class="d-flex flex-column align-items-center">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
-                  src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp"
+                  src="images/Reviews/Cropped_Image (4).png"
                   alt="avatar"
                   style="width: 150px"
                 />
                 <div class="text-center">
-                  <h5 class="mb-3">John Doe</h5>
+                  <h5 class="mb-3">Urvashi Mishra</h5>
+                  <p>Data Analytics</p>
+                  <p class="text-muted">
+                    <i class="fas fa-quote-left pe-2"></i>
+                    Thank you ANSH InfoTech. I really learned a lot during the
+                    entire training. The practicals, exercises, and projects
+                    were really good. I applied for a few jobs in the Machine
+                    Learning field and finally got placed with a good package.
+                  </p>
+                </div>
+                <ul
+                  class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                >
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                </ul>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="rounded-circle shadow-1-strong mb-4"
+                  src="images/Reviews/Cropped_Image (5).png"
+                  alt="avatar"
+                  style="width: 150px"
+                />
+                <div class="text-center">
+                  <h5 class="mb-3">Nirbhay Singh</h5>
                   <p>Web Developer</p>
                   <p class="text-muted">
                     <i class="fas fa-quote-left pe-2"></i>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Minus et deleniti nesciunt sint eligendi reprehenderit
-                    reiciendis.
+                    I would like to thank the trainer and ANSH InfoTech for the
+                    enhanced training provided during the entire course. The
+                    trainer has brilliant knowledge. The course content covers
+                    beginner to pro. Also, sir is a good motivator and friendly
+                    person.
+                  </p>
+                </div>
+                <ul
+                  class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                >
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                </ul>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="rounded-circle shadow-1-strong mb-4"
+                  src="images/Reviews/Cropped_Image.png"
+                  alt="avatar"
+                  style="width: 150px"
+                />
+                <div class="text-center">
+                  <h5 class="mb-3">Rutansha Dhir</h5>
+                  <p>Digital Marketing</p>
+                  <p class="text-muted">
+                    <i class="fas fa-quote-left pe-2"></i>
+                    I did not have knowledge of digital marketing before
+                    enrolling in this course. However, everything was taught
+                    from scratch. Initially, I thought I can’t do this. But the
+                    way of teaching and content is really simple and great!
+                  </p>
+                </div>
+                <ul
+                  class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                >
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                </ul>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="rounded-circle shadow-1-strong mb-4"
+                  src="images/Reviews/WhatsApp Image 2024-04-06 at 4.56.43 PM.png"
+                  alt="avatar"
+                  style="width: 150px"
+                />
+                <div class="text-center">
+                  <h5 class="mb-3">Pratham Chhabra</h5>
+                  <p>Digital Marketing</p>
+                  <p class="text-muted">
+                    <i class="fas fa-quote-left pe-2"></i>
+                    I would like to thank the trainer and ANSH InfoTech for the
+                    enhanced training provided during the entire course. The
+                    trainer has brilliant knowledge. The course content covers
+                    beginner to pro. Also, teachers here are good motivators and
+                    are friendly.
                   </p>
                 </div>
                 <ul
@@ -881,6 +981,68 @@
                   <li><i class="fas fa-star fa-sm"></i></li>
                   <li><i class="fas fa-star fa-sm"></i></li>
                   <li><i class="far fa-star fa-sm"></i></li>
+                </ul>
+              </div>
+            </li>
+
+            <li class="splide__slide">
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="rounded-circle shadow-1-strong mb-4"
+                  src="images/Reviews/cs 1.png"
+                  alt="avatar"
+                  style="width: 150px"
+                />
+                <div class="text-center">
+                  <h5 class="mb-3">Surmeet Singh</h5>
+                  <p>Cyber Security</p>
+                  <p class="text-muted">
+                    <i class="fas fa-quote-left pe-2"></i>
+                    The trainer here makes the content easy to learn and answers
+                    all the questions during the classes. I learned a lot of
+                    important concepts which looked so complex to me when I
+                    started. I recommend this course to anyone who wants to
+                    learn any course in Ansh InfoTech.
+                  </p>
+                </div>
+                <ul
+                  class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                >
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="far fa-star fa-sm"></i></li>
+                </ul>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="rounded-circle shadow-1-strong mb-4"
+                  src="images/Reviews/cs 2.png"
+                  alt="avatar"
+                  style="width: 150px"
+                />
+                <div class="text-center">
+                  <h5 class="mb-3">Vijay Rajput</h5>
+                  <p>Cyber Security</p>
+                  <p class="text-muted">
+                    <i class="fas fa-quote-left pe-2"></i>
+                    I recently completed a penetration testing training course
+                    in Ansh InfoTech, and I am thoroughly impressed. The
+                    instructors were highly skilled. The handson labs and
+                    real-world scenarios allowed me to gain valuable experience
+                  </p>
+                </div>
+                <ul
+                  class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                >
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
+                  <li><i class="fas fa-star fa-sm"></i></li>
                 </ul>
               </div>
             </li>
