--- a/public/register.html
+++ b/public/register.html
@@ -674,6 +674,7 @@
               if (data._id) {
                 // Registration successful
                 alert("Registration successful!");
+                window.location.reload()
                 // You can redirect or perform additional actions here
               } else {
                 // Registration failed
