--- a/public/training.html
+++ b/public/training.html
@@ -571,7 +571,7 @@
                 style="width: 3rem; mix-blend-mode: darken"
               />
             </div>
-            <h4>Advance Machine Learning</h4>
+            <h4>Machine Learning</h4>
             <p>
               Beyond Automation: Master AI Alchemy, Craft Intelligent Futures
               with ANSH InfoTech!
@@ -587,7 +587,7 @@
                 style="width: 3.2rem"
               />
             </div>
-            <h4>Advance IOS</h4>
+            <h4>IOS</h4>
             <p>
               Think Different, Code Different: Master Cutting-Edge iOS, Innovate
               the Smartphone Future with ANSH InfoTech!
