--- a/public/courses/appdev.html
+++ b/public/courses/appdev.html
@@ -284,7 +284,7 @@
                       <button
                         type="button"
                         class="btn btn-primary"
-                        onclick="downloadPDF('WD')"
+                        onclick="downloadPDF('AD-advanced')"
                         data-bs-dismiss="modal"
                       >
                         Complete curiculum
@@ -292,18 +292,10 @@
                       <button
                         type="button"
                         class="btn btn-primary"
-                        onclick="downloadPDF('WD1')"
+                        onclick="downloadPDF('AD-Basic')"
                         data-bs-dismiss="modal"
                       >
-                        1 month curiculum
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-primary"
-                        onclick="downloadPDF('WD6')"
-                        data-bs-dismiss="modal"
-                      >
-                        6 weeks curiculum
+                        2 Months curiculum
                       </button>
                     </div>
                   </div>
@@ -312,6 +304,7 @@
                       type="button"
                       class="btn btn-secondary"
                       data-bs-dismiss="modal"
+                      id="Secondmodal"
                     >
                       Close
                     </button>
@@ -326,7 +319,7 @@
               data-bs-toggle="modal"
               data-bs-target="#secondmodal"
             >
-              Join our online courses
+              Join our course now
             </button>
 
             <!-- Modal -->
@@ -341,7 +334,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">
-                      Proceed To Course Duration And Payment
+                      Join Course Now
                     </h1>
                     <button
                       type="button"
@@ -351,21 +344,29 @@
                     ></button>
                   </div>
                   <div class="modal-body">
-                    <div class="d-flex justify-content-between">
-                      <a href="https://rzp.io/l/ZxMoFxyqGP">
+                    <div class="d-flex justify-content-evenly flex-wrap">
+                      <a href="../register.html" class="text-decoration-none">
                         <button
                           type="button"
                           class="content_btn2 text-decoration-none"
                         >
-                          Join our 6 Months Course
+                          Join our Offline Course
                         </button>
                       </a>
-                      <a href="https://rzp.io/l/ZxMoFxyqGP">
+                      <a href="https://rzp.io/l/YPTi8IXT" class="text-decoration-none">
                         <button
                           type="button"
                           class="content_btn2 text-decoration-none"
                         >
-                          Join our 45 Days Course
+                          Join our 6 Months Online Course 
+                        </button>
+                      </a>
+                      <a href="https://rzp.io/l/SBayqNa6" class="text-decoration-none">
+                        <button
+                          type="button"
+                          class="content_btn2 text-decoration-none"
+                        >
+                          Join our 2 Months Online Course
                         </button>
                       </a>
                     </div>
@@ -428,4 +429,73 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      document
+        .getElementById("courseForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          const formData = {
+            name: document.getElementById("name").value,
+            email: document.getElementById("email").value,
+            phone: document.getElementById("phone").value,
+            college: document.getElementById("college").value,
+            address: document.getElementById("address").value,
+            course: document.getElementById("course").value,
+          };
+          console.log(formData); // For debugging
+          fetch("http://localhost:3000/api/submit-form", {
+            method: "POST",
+            body: JSON.stringify(formData),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          })
+            .then((response) => {
+              if (!response.ok) {
+                throw new Error("Network response was not ok");
+              }
+              document.getElementById("exampleModal").classList.remove("show");
+              document.getElementById("exampleModal").style.display = "none";
+              document.getElementById("successModal").classList.add("show");
+              document.getElementById("successModal").style.display = "block";
+              document.getElementById("Secondmodal")
+                  .addEventListener("click", () => {
+                    document.getElementById("successModal").style.display =
+                      "none";
+                    window.location.reload();
+                  });
+            })
+            .catch((error) => {
+              console.error(
+                "There was a problem with the fetch operation:",
+                error
+              );
+              alert("Error submitting the form. Please try again.");
+            });
+        });
+    });
+
+    function downloadPDF(type) {
+      if (type === "AD-advanced") {
+        const fileName = "Android Development Advance.pdf";
+        const filePath = "../Pdf's/Android Development Advance.pdf";
+        const a = document.createElement("a");
+        a.href = filePath;
+        a.download = fileName;
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+      } else if (type === "AD-Basic") {
+        const fileName = "Android Development Basics 2 months.pdf";
+        const filePath = "../Pdf's/Android Development Basics 2 months.pdf";
+        const a = document.createElement("a");
+        a.href = filePath;
+        a.download = fileName;
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+      } 
+    }
+  </script>
 </html>
